[gd_scene load_steps=4 format=3 uid="uid://cdl34thhlml20"]

[ext_resource type="Script" uid="uid://bqxfmon6wmyj5" path="res://scripts/menu.gd" id="1_yqeox"]
[ext_resource type="PackedScene" uid="uid://bnyqfvokpphks" path="res://scenes/face.tscn" id="2_vjb58"]
[ext_resource type="Theme" uid="uid://d3o0sxe06mayh" path="res://global_theme.tres" id="3_con2f"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_yqeox")

[node name="Play" type="Button" parent="."]
layout_mode = 1
offset_left = 32.0
offset_top = 32.0
offset_right = 277.0
offset_bottom = 85.0
theme = ExtResource("3_con2f")
text = "Play The Game!"

[node name="Quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = -85.0
offset_right = 312.0
offset_bottom = -32.0
grow_vertical = 0
theme = ExtResource("3_con2f")
text = "Quit The Game D:"

[node name="Face" parent="." instance=ExtResource("2_vjb58")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -256.0
offset_top = 224.0
offset_right = -256.0
offset_bottom = 224.0
grow_horizontal = 0
rotation = 0.2617994
scale = Vector2(2, 2)

[node name="FaceTimers" type="Node" parent="."]

[node name="Timer" type="Timer" parent="FaceTimers"]
autostart = true

[node name="Timer2" type="Timer" parent="FaceTimers"]
wait_time = 2.0
autostart = true

[node name="Timer3" type="Timer" parent="FaceTimers"]
wait_time = 4.0
autostart = true

[connection signal="button_down" from="Play" to="." method="play"]
[connection signal="button_down" from="Quit" to="." method="quit"]
[connection signal="timeout" from="FaceTimers/Timer" to="." method="timer_1"]
[connection signal="timeout" from="FaceTimers/Timer2" to="." method="timer_2"]
[connection signal="timeout" from="FaceTimers/Timer3" to="." method="timer_3"]
